# r-cli

./: .gitignore  Note.txt  README.md  index.html  package.json  readme.md  tailwind.config.js  todo.txt  tsconfig.json  vite.config.ts  vue.config.js
backend/: .gitignore  pyproject.toml
backend/config/: settings.py
electron/: electron.ts  preload.ts
preload/: preload.js
public/: index.html
src/: App.vue  app.cpp  background.ts  style.css
src/components/: CLIPlayground.vue  SideBar.vue  UpperFrame.vue
src/components/CLIPlayground/: Index.vue
src/components/CLIPlayground/Tab/: Index.vue
src/components/CLIPlayground/Tab/CustomTerminal/: Index.vue  Info.vue  InputForm.vue
src/components/CLIPlayground/Tab/Terminal/: Index.vue
src/components/Docs/: DocsContent.vue  Index.vue
src/components/SideBar/: Index.vue  Tab.vue  TabButton.vue
src/components/TerminalLists/: Index.vue
src/components/UpperFrame/: CurrentTerminalTab.vue  Index.vue  WindowsControlButton.vue
src/constant/: style.ts
src/electron/main/: main.ts
src/router/: index.ts
src/routes/: index.ts
src/store/: index.ts  types.ts
src/store/modules/docs/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts  types.ts
src/store/modules/tabs/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts  types.ts
src/store/modules/terminalList/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts  types.ts
src/types/: custom.d.ts  index.d.ts
