[tool.poetry]
name = "r-cli-backend"
version = "0.1.0"
description = ""
authors = ["Roman-Ojha <razzroman98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
Django = "^4.1.1"
PyYAML = "^6.0"
autopep8 = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
